# iamscope

./: .gitignore  BENCHMARK_STATUS.md  CONTRIBUTING.md  DEVIATIONS_LEDGER.md  README.md  SECURITY.md  pyproject.toml
benchmarks/: __init__.py  common.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PERFORMANCE.md  REVIEWER_GUIDE.md  START_HERE.md  arf-truth-wrapper.md  deny-audit-report.md  deny-evaluation-spec.md  permission-boundary-intersection.md  phase1-design-plan.md  probe-overlay-producer.md  resource-policy-edges.md  session-5-design.md  stale-principal-drift.md  truth-contract.md
iamscope/: __init__.py  cli.py  constants.py  demo_pack.py  diff.py  findings_diff.py  models.py  pipeline.py  validate.py  verify.py  why.py
scripts/: check.sh  check_benchmark_artifact_hygiene.sh  check_env12_scp_prereqs.sh  check_env22_cross_account_prereqs.sh  classify_real_pilot_findings.py  compare_frozen_corpus_baseline.sh  compare_prod_like_oracle_findings.py  compare_scalability_baseline.sh  evaluate_benchmark_archive.sh  evaluate_frozen_corpus_thresholds.sh  evaluate_synthetic_thresholds.sh  freeze_phase0_benchmark_snapshot.sh  generate_controlled_passrole_validation_report.sh  generate_controlled_sts_validation_bundle.sh  generate_controlled_sts_validation_report.sh  group_inconclusive_uncertainty.py  iamscope-sync-health  ingest_benchmark_archive.sh  materialize_phase0_corpus.sh  probe_complex_benchmark_replay_feasibility.py  probe_complex_passrole_lambda_replay_subset.py  render_benchmark_dry_run.sh  render_benchmark_pair_report.sh  review_security.sh  (+38 more)
tests/: conftest.py  (+98 more)
(+797 files in other folders)
