[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iamscope"
version = "0.3.0"
description = "Research-preview AWS IAM reasoning tool with bounded evidence and explicit non-claims"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[iam,organizations,awslambda,ec2,sts]>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[iam,organizations,lambda,ec2,sts]",
    "hypothesis>=6.0",
]

[project.scripts]
iamscope = "iamscope.cli:cli_entry"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "moto: tests requiring moto AWS mock",
    "golden: golden output comparison tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Allow bare dict/list in annotations - too noisy to fix everywhere at once
disallow_any_generics = false

[tool.setuptools.packages.find]
include = ["iamscope*"]
exclude = ["tests*", "acceptance*", "evals*", "docs*"]
